# ffmpeg

./: CMakeLists.txt  build.sh  index.py  readme.md  run-in-docker.ps1  run-in-docker.sh  transform.sh
cmake/module/: FindFFmpeg.cmake  FindJpeg.cmake
src/: common.c  common.h  ffmpeg_python.c  ffmpeg_python.h  record_rtsp.c  record_rtsp.h  video2images.c  video2images.h
